# SonaRise

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/sonarise/: __init__.py  cli.py  config.py  upgrade.py  version_check.py
src/sonarise/utils/: __init__.py  logger.py
tests/: conftest.py  test_config.py  test_logger.py  test_upgrade.py  test_version_check.py
